--- a/static/index.html
+++ b/static/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <section class="section">
-      <div id="artist" class="container">
+      <div class="container">
         <h1 class="title has-text-info has-text-centered is-size-4">
           Ricerca per artista
         </h1>
