--- a/static/index.html
+++ b/static/index.html
@@ -189,12 +189,7 @@
         ></div>
       </div>
       <br />
-      <img
-        id="parallax"
-        class="thumbnail"
-        src="img/wallpaper.png"
-        alt="image"
-      />
+      <div class="parallax"></div>
       <br />
       <div id="ita" class="container">
         <h1 class="title has-text-info has-text-centered is-size-4">
@@ -267,7 +262,7 @@
                   </p>
                   <p class="subtitle has-text-white">
                     Da Elvis agli U2, da Madonna ai Coldplay. Dai capolavori
-                    Rock alle nuove frontieri Hip-Hop, dal primo Rapper a quelli
+                    Rock alle nuove frontiere Hip-Hop, dal primo Rapper a quelli
                     moderni la lista è veramente ampia e completa.
                   </p>
                 </article>
@@ -323,7 +318,6 @@
         </div>
       </footer>
     </section>
-
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
