--- a/static/index.html
+++ b/static/index.html
@@ -164,7 +164,7 @@
         <div class="level">
           <div id="cercartista" class="level-item">
             <div class="field has-addons">
-              <div class="control">
+              <div class="control autocomplete">
                 <input
                   id="artist"
                   class="input is-info"
